// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render Expenses Summary with 1 Expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     expenses totalling 
    $2.35
  </h1>
</div>
`;

exports[`Should correctly render Expenses Summary with multiples Expense 1`] = `
<div>
  <h1>
    Viewing 
    20
     expenses totalling 
    $23.05
  </h1>
</div>
`;
